kubernetes/apps/external-endpoints/services/app/forgejo/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: forgejo-ssh
  labels:
    kubernetes.io/service-name: forgejo-ssh
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.24
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: ssh
    port: 22
    protocol: TCP
