kubernetes/apps/external-endpoints/services/app/forgejo/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  clusterIP: None
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
